Bug 268547 - buddies without icons
Summary: buddies without icons
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: text-ui (other bugs)
Version First Reported In: git-latest
Platform: openSUSE Linux
: NOR normal
Target Milestone: 0.4.0
Assignee: Telepathy Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-03-15 10:24 UTC by Alin M Elena
Modified: 2012-07-06 12:47 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alin M Elena 2011-03-15 10:24:35 UTC
Version:           svn-playground (using Devel) 
OS:                Linux

a buddy which does not have icon in the list appears with a blue pawn but in the chat window with an empty square... Would be nice to replace the square with the pawn.



Reproducible: Didn't try
Comment 1 David Edmundson 2011-03-15 15:43:27 UTC
Ideally we need a different icon (colored pawns?) for you and the other contact.

This should be a fairly simple task. 
 Code should be added in AdiumThemeView NOT in AdiumThemeContentInfo or ChatWidget.
Comment 2 Florian Reinhard 2011-03-16 15:38:27 UTC
Git commit 73f946b89e0dfed47f1d4f28246c51d0ce73f4c1 by Florian Reinhard.
Committed on 16/03/2011 at 01:35.
Pushed by reinhard into branch 'master'.

Show a default icon in the text-ui when there is no avatar.

REVIEW:100866
BUG:268547

M  +4    -2    lib/adium-theme-view.cpp     
M  +1    -0    lib/adium-theme-view.h     

http://commits.kde.org/telepathy-chat-handler/73f946b89e0dfed47f1d4f28246c51d0ce73f4c1