Show a default icon in the text-ui when there is no avatar.

REVIEW:100866
BUG:268547